added documentaiton notes to readme so I dont like. Forget it

--- a/test.ipynb
+++ b/test.ipynb
@@ -168,6 +168,15 @@
     "#if __name__ == \"__main__\":\n",
     "#    unittest.main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/smogon/pokemon-showdown/blob/master/COMMANDLINE.md\n",
+    "\n",
+    "file on how to actually work with the command line, thanks docs!!"
+   ]
   }
  ],
  "metadata": {
