Changed approach. We are using a Node.JS / Python dual appraoch. Instead of going for a totalistic coverage of all possibilities (would take very long, would have to try EVERY damage roll) going for a probabilistic coverage of all most likely possibilities (perhaps a config option, attempts?)

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,13 @@
     "    # Initialize a CLI instance.\n",
     "    def __init__(self):\n",
     "        # This must be at the start of every command.\n",
-    "        self.prefix = r\"node .\\pokemon-showdown\\pokemon-showdown \"\n",
+    "        self.prefix = r\"node pokemon-showdown-access.js \"\n",
     "        # This makes logging togglable\n",
     "        self.logging = False\n",
     "        # Helps keep an order to executed commands in logging\n",
     "        self.command_number = 1\n",
+    "        # Secret print debug (makes things messy) (turn on if you know what you're doing)\n",
+    "        self.secret_print_debug = False\n",
     "\n",
     "    # Non-CLI functions\n",
     "\n",
@@ -64,118 +66,89 @@
     "        command = self.prefix + \"generate-team\"\n",
     "        # Run the command\n",
     "        completed_command = subprocess.run(command, shell=True, capture_output=True)\n",
+    "        # Print the command raw.\n",
+    "        if(self.secret_print_debug):\n",
+    "            print(completed_command)\n",
     "        # Collect the output by decoding the output\n",
     "        team_string = completed_command.stdout.decode()\n",
     "        # Log that we ran this command\n",
     "        self.log(\"Generated team\")\n",
     "        # Return the team\n",
-    "        return team_string\n",
-    "\n",
-    "    # validate a team\n",
-    "    def validate_team(self):\n",
-    "        # Create the command\n",
-    "        command = self.prefix + \"validate-team\"\n",
-    "        # Run the command\n",
-    "        completed_command = subprocess.run(command, shell=True, capture_output=True)\n",
-    "        # Collect the output by decoding the output\n",
-    "        team_string = completed_command.stdout.decode()\n",
-    "        # Log that we ran this command\n",
-    "        self.log(\"Generated team\")\n",
-    "        # Return the team\n",
-    "        return team_string\n",
-    "\n",
-    "    # Print the help readme\n",
-    "    def help(self):\n",
-    "        # Create the command\n",
-    "        command = self.prefix + \"help\"\n",
-    "        # Run the command\n",
-    "        completed_command = subprocess.run(command, shell=True, capture_output=True)\n",
-    "        # Collect the output by decoding the output\n",
-    "        team_string = completed_command.stdout.decode()\n",
-    "        # Log that we ran this command\n",
-    "        self.log(\"Printed help statement\")\n",
-    "        # Return the team\n",
-    "        return team_string\n",
-    " \n",
-    "    # Export a team\n",
-    "    def export_team(self, team_string):\n",
-    "        # Create the command\n",
-    "        command = self.prefix + \"export-team \\\"\" + team_string + \"\\\"\"\n",
-    "        # Run the command\n",
-    "        completed_command = subprocess.run(command, shell=True, capture_output=True, input=team_string.encode())\n",
-    "        # Collect the output by decoding the output\n",
-    "        team_export = completed_command.stdout.decode()\n",
-    "        # Log that we ran this command\n",
-    "        self.log(\"Generated an exportable form of a team\")\n",
-    "        # Return the team\n",
-    "        return team_export\n"
+    "        return team_string\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] Logging enabled\n",
-      "[2] Generated team\n",
-      "\n",
-      "[3] Generated an exportable form of a team\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'Pokemon_Showdown_CLI_Interface' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m pokemon_showdown_cli \u001b[38;5;241m=\u001b[39m \u001b[43mPokemon_Showdown_CLI_Interface\u001b[49m()\n\u001b[0;32m      3\u001b[0m pokemon_showdown_cli\u001b[38;5;241m.\u001b[39msecret_print_debug \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m      4\u001b[0m pokemon_showdown_cli\u001b[38;5;241m.\u001b[39mtoggle_logging()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Pokemon_Showdown_CLI_Interface' is not defined"
      ]
     }
    ],
    "source": [
     "pokemon_showdown_cli = Pokemon_Showdown_CLI_Interface()\n",
     "\n",
+    "pokemon_showdown_cli.secret_print_debug = True\n",
     "pokemon_showdown_cli.toggle_logging()\n",
     "#help_statement = pokemon_showdown_cli.help()\n",
     "#print(help_statement, end='')\n",
-    "team_string = pokemon_showdown_cli.generate_team()\n",
-    "print(team_string)\n",
-    "team_exportable = pokemon_showdown_cli.export_team(team_string)\n",
-    "print(team_exportable)"
+    "#team_string = pokemon_showdown_cli.generate_team()\n",
+    "#print(team_string)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['|faint|p2a: Gengar']\n",
+      "Player 2 had a poke faint.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Ignore this for now, it'll probably work when im actually like, in a python file.\n",
+    "result = subprocess.run(\"node pokemon-showdown-access.js\", capture_output=True)\n",
     "\n",
-    "#import unittest\n",
+    "move_result = result.stdout.decode()\n",
+    "#print(move_result)\n",
     "\n",
-    "#class Test_Pokemon_Showdown_CLI_Interface(unittest.TestCase):\n",
-    "    # Creates a cli for us to use in testing\n",
-    "    #def setUp(self):\n",
-    "    #    self.test_cli = Pokemon_Showdown_CLI_Interface()\n",
+    "import re\n",
     "\n",
-    "    # Test that we can toggle logging.\n",
-    "#    def test_logging(self):\n",
-    "        # Test default value\n",
-    "#        test_cli = Pokemon_Showdown_CLI_Interface()\n",
-    "#        self.assertEqual(False, test_cli.logging)\n",
+    "# Count the amount of faints.\n",
+    "# ^ = start of the line\n",
+    "# .* = zero or more characters\n",
+    "# \\b = begin word border\n",
+    "# \\b = end word border\n",
+    "# .* = zero or more characters\n",
+    "# $ = end of the line\n",
+    "# Combined effect? Gets the lines where pokemon\n",
+    "# faint data is contained.\n",
+    "faints = re.findall(r\"^.*\\bfaint\\b.*$\", move_result, re.MULTILINE)\n",
+    "print(faints)\n",
     "\n",
-    "        # Toggle then check it\n",
-    "    #    self.test_cli.toggle_logging()\n",
-    "    #    self.assertEqual(True, self.test_cli.logging)\n",
-    "\n",
-    "#if __name__ == \"__main__\":\n",
-    "#    unittest.main()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://github.com/smogon/pokemon-showdown/blob/master/COMMANDLINE.md\n",
-    "\n",
-    "file on how to actually work with the command line, thanks docs!!"
+    "if len(faints) > 0:\n",
+    "    for faint in faints:\n",
+    "        if \"p1\" in faint:\n",
+    "            print(\"Player 1 had a poke faint.\")\n",
+    "        if \"p2\" in faint:\n",
+    "            print(\"Player 2 had a poke faint.\")\n",
+    "else:\n",
+    "    print(\"No players had any pokes faint.\")\n",
+    "\n"
    ]
   }
  ],
