Outline project goals in the main.py so I kinda have like. Something to follow!!

--- a/test.ipynb
+++ b/test.ipynb
@@ -108,47 +108,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['|faint|p2a: Gengar']\n",
-      "Player 2 had a poke faint.\n"
+      "[+1] Player 2 had a poke faint.\n",
+      "1\n"
      ]
     }
    ],
    "source": [
     "result = subprocess.run(\"node pokemon-showdown-access.js\", capture_output=True)\n",
     "\n",
-    "move_result = result.stdout.decode()\n",
-    "#print(move_result)\n",
+    "game_log = result.stdout.decode()\n",
     "\n",
     "import re\n",
     "\n",
-    "# Count the amount of faints.\n",
-    "# ^ = start of the line\n",
-    "# .* = zero or more characters\n",
-    "# \\b = begin word border\n",
-    "# \\b = end word border\n",
-    "# .* = zero or more characters\n",
-    "# $ = end of the line\n",
-    "# Combined effect? Gets the lines where pokemon\n",
-    "# faint data is contained.\n",
-    "faints = re.findall(r\"^.*\\bfaint\\b.*$\", move_result, re.MULTILINE)\n",
-    "print(faints)\n",
+    "def evaluate_position(game_log):\n",
+    "    # Will store the weight of various happenings.\n",
+    "    eval_weight = {\n",
+    "        \"faint\": 1\n",
+    "    }\n",
+    "    # This is how we will compare \"winning\" and \"losing\"\n",
+    "    # Kinda inspired by chess?\n",
+    "    # p1 is +, p2 is -\n",
+    "    game_evaluation = 0\n",
     "\n",
-    "if len(faints) > 0:\n",
-    "    for faint in faints:\n",
-    "        if \"p1\" in faint:\n",
-    "            print(\"Player 1 had a poke faint.\")\n",
-    "        if \"p2\" in faint:\n",
-    "            print(\"Player 2 had a poke faint.\")\n",
-    "else:\n",
-    "    print(\"No players had any pokes faint.\")\n",
-    "\n"
+    "    # Gets faint lines using regex\n",
+    "    # ^ = start of the line\n",
+    "    # .* = zero or more characters\n",
+    "    # \\b = begin word border\n",
+    "    # \\b = end word border\n",
+    "    # .* = zero or more characters\n",
+    "    # $ = end of the line\n",
+    "    # Combined effect? Gets the lines where pokemon\n",
+    "    # faint data is contained.\n",
+    "    faints = re.findall(r\"^.*\\bfaint\\b.*$\", game_log, re.MULTILINE)\n",
+    "    if len(faints) > 0:\n",
+    "        for faint in faints:\n",
+    "            if \"p1\" in faint:\n",
+    "                print(f\"[-{eval_weight[\"faint\"]}] Player 1 had a poke faint.\")\n",
+    "                game_evaluation -= eval_weight[\"faint\"]\n",
+    "            if \"p2\" in faint:\n",
+    "                print(f\"[+{eval_weight[\"faint\"]}] Player 2 had a poke faint.\")\n",
+    "                game_evaluation += eval_weight[\"faint\"]\n",
+    "    else:\n",
+    "        print(f\"[0] No players had any pokes faint.\")\n",
+    "\n",
+    "    return game_evaluation\n",
+    "\n",
+    "eval = evaluate_position(game_log)\n",
+    "print(eval)\n"
    ]
   }
  ],
