--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,7 @@
       "|teampreview|4\n",
       "We are in team preview phase\n",
       "We need to choose 4 pokemon\n",
-      "We know, using combinatorics, that there are 360 ways to choose 4 from 6\n",
-      "360\n"
+      "We know, using combinatorics, that there are 360 ways to choose 4 from 6\n"
      ]
     }
    ],
